benchmark scope state and output time